# debugpro

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: learn_pyproject_toml.md
src/: main.py
src/debug_pro/: excepthook.py
src/debugpro/: __init__.py  excepthook.py  tracevar.py  validate_packages.py
src/psycopg_hate/: identify_problematic_columns.py  type_analyzer.py
tests/: attributeerror.py  generalerror.py  indexerror.py  keyerror.py
