[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-pro"
version = "0.1.0"
description = "Prototype version of debug-pro"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = []
